# toolbox-api-client-go/model_list_remotes_response.go
@@ -1,0 +1,168 @@
+/*
+Daytona Toolbox API
+
+Daytona Toolbox API. The base URL comes from the sandbox's `toolboxProxyUrl` field (returned in sandbox DTO by the main Daytona API) plus the sandbox ID: `{toolboxProxyUrl}/{sandboxId}/{endpoint}`. Default for Daytona Cloud: `https://proxy.app.daytona.io/toolbox/{sandboxId}`.
+
+API version: v0.0.0-dev
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package toolbox
+
+import (
+	"encoding/json"
+	"fmt"
+)
+
+// checks if the ListRemotesResponse type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &ListRemotesResponse{}
+
+// ListRemotesResponse struct for ListRemotesResponse
+type ListRemotesResponse struct {
+	Remotes []GitRemote `json:"remotes"`
+	AdditionalProperties map[string]interface{}
+}
+
+type _ListRemotesResponse ListRemotesResponse
+
+// NewListRemotesResponse instantiates a new ListRemotesResponse object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewListRemotesResponse(remotes []GitRemote) *ListRemotesResponse {
+	this := ListRemotesResponse{}
+	this.Remotes = remotes
+	return &this
+}
+
+// NewListRemotesResponseWithDefaults instantiates a new ListRemotesResponse object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewListRemotesResponseWithDefaults() *ListRemotesResponse {
+	this := ListRemotesResponse{}
+	return &this
+}
+
+// GetRemotes returns the Remotes field value
+func (o *ListRemotesResponse) GetRemotes() []GitRemote {
+	if o == nil {
+		var ret []GitRemote
+		return ret
+	}
+
+	return o.Remotes
+}
+
+// GetRemotesOk returns a tuple with the Remotes field value
+// and a boolean to check if the value has been set.
+func (o *ListRemotesResponse) GetRemotesOk() ([]GitRemote, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return o.Remotes, true
+}
+
+// SetRemotes sets field value
+func (o *ListRemotesResponse) SetRemotes(v []GitRemote) {
+	o.Remotes = v
+}
+
+func (o ListRemotesResponse) MarshalJSON() ([]byte, error) {
+	toSerialize,err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o ListRemotesResponse) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	toSerialize["remotes"] = o.Remotes
+
+	for key, value := range o.AdditionalProperties {
+		toSerialize[key] = value
+	}
+
+	return toSerialize, nil
+}
+
+func (o *ListRemotesResponse) UnmarshalJSON(data []byte) (err error) {
+	// This validates that all required properties are included in the JSON object
+	// by unmarshalling the object into a generic map with string keys and checking
+	// that every required field exists as a key in the generic map.
+	requiredProperties := []string{
+		"remotes",
+	}
+
+	allProperties := make(map[string]interface{})
+
+	err = json.Unmarshal(data, &allProperties)
+
+	if err != nil {
+		return err;
+	}
+
+	for _, requiredProperty := range(requiredProperties) {
+		if _, exists := allProperties[requiredProperty]; !exists {
+			return fmt.Errorf("no value given for required property %v", requiredProperty)
+		}
+	}
+
+	varListRemotesResponse := _ListRemotesResponse{}
+
+	err = json.Unmarshal(data, &varListRemotesResponse)
+
+	if err != nil {
+		return err
+	}
+
+	*o = ListRemotesResponse(varListRemotesResponse)
+
+	additionalProperties := make(map[string]interface{})
+
+	if err = json.Unmarshal(data, &additionalProperties); err == nil {
+		delete(additionalProperties, "remotes")
+		o.AdditionalProperties = additionalProperties
+	}
+
+	return err
+}
+
+type NullableListRemotesResponse struct {
+	value *ListRemotesResponse
+	isSet bool
+}
+
+func (v NullableListRemotesResponse) Get() *ListRemotesResponse {
+	return v.value
+}
+
+func (v *NullableListRemotesResponse) Set(val *ListRemotesResponse) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableListRemotesResponse) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableListRemotesResponse) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableListRemotesResponse(val *ListRemotesResponse) *NullableListRemotesResponse {
+	return &NullableListRemotesResponse{value: val, isSet: true}
+}
+
+func (v NullableListRemotesResponse) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableListRemotesResponse) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
